# Healthcare-Agent

./: .gitignore  CNAME  HealthcareDB.session.sql  README.md  Users.py  agent.py  app.py  config_mcp.json  debug_runner.py  docker-compose.yml  doctorconnect.py  main.py  medical_profile_user.py  pyproject.toml  requirements.txt  setup_db.sql  store_conversation.py  test.ipynb  triagent.py  verify_setup.py
backend/: Dockerfile  config_mcp.json  init_db.py
backend/app/: cli.py  database.py  doctorconnect.py  main.py  medical_profile_user.py  store_conversation.py  test.ipynb  triagent.py  users.py
backend/app/agents/: agent.py
frontend/: app.js  index.html  package.json  script.js  style.css  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: Layout.jsx  Navbar.jsx
frontend/src/pages/: Chat.jsx  Dashboard.jsx  Doctors.jsx  Login.jsx  Profile.jsx  Signup.jsx  SymptomAnalysis.jsx
frontend/src/services/: api.js
